--- a/ConferenceTracker/Views/Speakers/Create.cshtml
+++ b/ConferenceTracker/Views/Speakers/Create.cshtml
@@ -17,27 +17,27 @@
             <div class="form-group">
                 <label asp-for="FirstName" class="control-label"></label>
                 <input asp-for="FirstName" class="form-control" />
-                <span asp-validation-for="FirstName" span="text-danger"></span>
+                <span asp-validation-for="FirstName" class="FirstName"></span>
             </div>
             <div class="form-group">
                 <label asp-for="LastName" class="control-label"></label>
                 <input asp-for="LastName" class="form-control" />
-                <span asp-validation-for="LastName" span="text-danger"></span>
+                <span asp-validation-for="LastName" class="LastName"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
                 <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" span="text-danger"></span>
+                <span asp-validation-for="Description" class="Description"></span>
             </div>
             <div class="form-group">
                 <label asp-for="EmailAddress" class="control-label"></label>
                 <input asp-for="EmailAddress" class="form-control" />
-                <span asp-validation-for="EmailAddress" span="text-danger"></span>
+                <span asp-validation-for="EmailAddress" class="EmailAddress"></span>
             </div>
             <div class="form-group">
                 <label asp-for="PhoneNumber" class="control-label"></label>
                 <input asp-for="PhoneNumber" class="form-control" />
-                <span asp-validation-for="PhoneNumber" span="text-danger"></span>
+                <span asp-validation-for="PhoneNumber" class="PhoneNumber"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
